--- a/test/src/main/java/uks/debuggen/microshop/MicroShop/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/microshop/MicroShop/classModel.yaml
@@ -686,8 +686,8 @@ if (outdated(event)) {
   methodBody: 	"OrderBuilt event = (OrderBuilt) e;
 Order object = model.getOrCreateOrder(event.getBlockId());
 object.setCode(event.getCode());
-object.setProduct(model.getOrCreateProduct(getObjectId(event.getProduct())));
-object.setCustomer(model.getOrCreateCustomer(getObjectId(event.getCustomer())));
+object.setProduct(model.getOrCreateProduct(event.getProduct()));
+object.setCustomer(model.getOrCreateCustomer(event.getCustomer()));
 object.setAddress(event.getAddress());
 object.setState(event.getState());
 return object;
