re adding routing lowercase

--- a/test/src/test/java/uks/debuggen/pm/routing/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/pm/routing/classModel.yaml
@@ -8,8 +8,8 @@
   packageSrcFolder: 	"test/src/test/java/uks/debuggen/pm/routing"
 
 - testRoutingBoard: 	org.fulib.classmodel.Clazz
-  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import static org.assertj.core.api.Assertions.assertThat;"
-  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import static org.assertj.core.api.Assertions.assertThat;"
+  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import org.fulib.FulibTools;" 	"import static org.assertj.core.api.Assertions.assertThat;"
+  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import org.fulib.FulibTools;" 	"import static org.assertj.core.api.Assertions.assertThat;"
   methods: 	testRoutingBoard_testRoutingBoard
   model: 	c
   modified: 	false
@@ -46,14 +46,22 @@ leg2.setVia(\"A66\");
 leg2.setLength(\"71 km\");
 
 Stop frankfurt = new Stop().setId(\"Frankfurt\");
+
+// create links
 route1.setStart(kassel);
 route1.setEnd(frankfurt);
 kassel.setDeparture(leg1);
 leg1.setTo(fulda);
 fulda.setDeparture(leg2);
 leg2.setTo(frankfurt);
+
+FulibTools.objectDiagrams().dumpSVG(\"tmp/RoutingBoardStart.svg\", route1, kassel, leg1, fulda, leg2, frankfurt);
+
 logic.computeLength(route1);
 assertThat(route1.getLength()).isEqualTo(\"175 km\");
+
+FulibTools.objectDiagrams().dumpSVG(\"tmp/RoutingBoardEnd.svg\", route1, kassel, leg1, fulda, leg2, frankfurt);
+
 
 System.out.println();
 "
