--- a/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
@@ -507,7 +507,7 @@ eventBroker.stop();
 spark.stop();
 docMedical.stop();
 
-System.out.println();
+System.out.println(\"FamilyDoctor completed gracefully\");
 "
   modified: 	false
   modifiers: 	public
