--- a/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
@@ -269,7 +269,7 @@ eventBroker.stop();
 spark.stop();
 marburgHealthSystem.stop();
 
-System.out.println();
+System.out.println(\"HealthExperts completed gracefully\");
 "
   modified: 	false
   modifiers: 	public
