--- a/test/src/test/java/uks/debuggen/microshop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/microshop/classModel.yaml
@@ -546,7 +546,7 @@ spark.stop();
 warehouse.stop();
 microShop.stop();
 
-System.out.println();
+System.out.println(\"MicroShop completed gracefully\");
 "
   modified: 	false
   modifiers: 	public
