--- a/test/src/test/java/uks/debuggen/studyright/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/studyright/classModel.yaml
@@ -515,7 +515,7 @@ eventBroker.stop();
 spark.stop();
 studyRight.stop();
 
-System.out.println();
+System.out.println(\"SomeEventStorming completed gracefully\");
 "
   modified: 	false
   modifiers: 	public
