using System.err to avoid mixing output

--- a/test/src/test/java/uks/debuggen/medical/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/classModel.yaml
@@ -262,7 +262,7 @@ open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_07:\"));
 
-System.out.println();
+System.err.println();
 "
   modified: 	false
   modifiers: 	public
