--- a/test/src/test/java/uks/debuggen/microshop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/microshop/classModel.yaml
@@ -81,9 +81,9 @@
       spark = Service.ignite();
       spark.port(port);
       spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
-      executor.submit(() -> System.out.println(\"test executor works\"));
+      executor.submit(() -> System.err.println(\"test executor works\"));
       executor.submit(this::subscribeAndLoadOldEvents);
-      executor.submit(() -> System.out.println(\"test executor has done subscribeAndLoadOldEvents\"));"
+      executor.submit(() -> System.err.println(\"test executor has done subscribeAndLoadOldEvents\"));"
   modified: 	false
   modifiers: 	public
   name: 	start
@@ -173,7 +173,7 @@
             throw new RuntimeException(\"event timeout waiting for \" + id);
          }
 
-         System.out.println(\"Test got event \" + e.getId());
+         System.err.println(\"Test got event \" + e.getId());
          history.put(e.getId(), e);
       }"
   modified: 	false
@@ -546,7 +546,7 @@ spark.stop();
 warehouse.stop();
 microShop.stop();
 
-System.out.println(\"MicroShop completed gracefully\");
+System.err.println(\"MicroShop completed gracefully\");
 "
   modified: 	false
   modifiers: 	public
