--- a/test/src/test/java/uks/debuggen/pm/studyright/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/pm/studyright/classModel.yaml
@@ -68,7 +68,7 @@ assertThat(karli.getRoute()).isEqualTo(\"math -> calculus -> math -> modeling ->
 FulibTools.objectDiagrams().dumpSVG(\"tmp/StudyRightBoardEnd.svg\", karli, stop1, r1, r2, r4, r5);
 
 
-System.out.println();
+System.err.println();
 "
   modified: 	false
   modifiers: 	public
