--- a/test/src/test/java/uks/debuggen/pm/routing/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/pm/routing/classModel.yaml
@@ -63,7 +63,7 @@ assertThat(route1.getLength()).isEqualTo(\"175 km\");
 FulibTools.objectDiagrams().dumpSVG(\"tmp/RoutingBoardEnd.svg\", route1, kassel, leg1, fulda, leg2, frankfurt);
 
 
-System.out.println();
+System.err.println();
 "
   modified: 	false
   modifiers: 	public
