using Unirest timeout of 3 minutes

--- a/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
@@ -468,7 +468,8 @@ handleDemoCarConnectedEvent(event);
   clazz: 	ionicKassel42Service
   declaration: 	"public void start()"
   id: 	IonicKassel42Service_start
-  methodBody: 	"model = new IonicKassel42Model();
+  methodBody: 	"Unirest.setTimeouts(3*60*1000, 3*60*1000);
+model = new IonicKassel42Model();
 setBuilder(new IonicKassel42Builder().setModel(model));
 setBusinessLogic(new IonicKassel42BusinessLogic());
 businessLogic.setBuilder(getBuilder());
