--- a/test/src/test/java/uks/debuggen/studyright/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/studyright/classModel.yaml
@@ -74,7 +74,8 @@
   clazz: 	testSomeEventStorming
   declaration: 	"public void start()"
   id: 	TestSomeEventStorming_start
-  methodBody: 	"      eventQueue = new LinkedBlockingQueue<Event>();
+  methodBody: 	"      Unirest.setTimeouts(3*60*1000, 3*60*1000);
+      eventQueue = new LinkedBlockingQueue<Event>();
       history  = new LinkedHashMap<>();
       port = 41999;
       ExecutorService executor = Executors.newSingleThreadExecutor();
@@ -515,7 +516,7 @@ eventBroker.stop();
 spark.stop();
 studyRight.stop();
 
-System.err.println(\"SomeEventStorming completed gracefully\");
+System.err.println(\"SomeEventStorming completed good and gracefully\");
 "
   modified: 	false
   modifiers: 	public
