--- a/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
@@ -460,7 +460,8 @@ handleDemoChargingRequestedEvent(event);
   clazz: 	cityElectricsKasselService
   declaration: 	"public void start()"
   id: 	CityElectricsKasselService_start
-  methodBody: 	"model = new CityElectricsKasselModel();
+  methodBody: 	"Unirest.setTimeouts(3*60*1000, 3*60*1000);
+model = new CityElectricsKasselModel();
 setBuilder(new CityElectricsKasselBuilder().setModel(model));
 setBusinessLogic(new CityElectricsKasselBusinessLogic());
 businessLogic.setBuilder(getBuilder());
