--- a/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
@@ -903,7 +903,8 @@ return object;
   clazz: 	partyAppService
   declaration: 	"public void start()"
   id: 	PartyAppService_start
-  methodBody: 	"model = new PartyAppModel();
+  methodBody: 	"Unirest.setTimeouts(3*60*1000, 3*60*1000);
+model = new PartyAppModel();
 setBuilder(new PartyAppBuilder().setModel(model));
 setBusinessLogic(new PartyAppBusinessLogic());
 businessLogic.setBuilder(getBuilder());
