--- a/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
@@ -74,7 +74,8 @@
   clazz: 	testFamilyDoctor
   declaration: 	"public void start()"
   id: 	TestFamilyDoctor_start
-  methodBody: 	"      eventQueue = new LinkedBlockingQueue<Event>();
+  methodBody: 	"      Unirest.setTimeouts(3*60*1000, 3*60*1000);
+      eventQueue = new LinkedBlockingQueue<Event>();
       history  = new LinkedHashMap<>();
       port = 41999;
       ExecutorService executor = Executors.newSingleThreadExecutor();
@@ -507,7 +508,7 @@ eventBroker.stop();
 spark.stop();
 docMedical.stop();
 
-System.err.println(\"FamilyDoctor completed gracefully\");
+System.err.println(\"FamilyDoctor completed good and gracefully\");
 "
   modified: 	false
   modifiers: 	public
